# ia-royalty-validations

./: .gitIgnore  .gitignore  README.md  RESULTS_PAGE_UI_ISSUES.md  allm-logs.txt  allm-sys.txt  allm-ws.txt  backend-logs.txt  backend-logs2.txt  backend_logs.txt  chat-final.txt  chat-nginx.txt  chat-rag.txt  chat-test.txt  chat-test2.txt  check_auth.py  check_auth_detail.py  check_schema.py  curl-debug.txt  dns_result.txt  dns_test.py  do_test.py  docker-info.txt  fetch_swagger.py  generate_royalty_base.py  git_push.ps1  git_push.sh  health.txt  health_check.txt  host_schilling_test.txt  host_test2.txt  login_result.txt  model-direct2.txt  model-runner.txt  rebuild_out.txt  restart_docker.py  swagger_analysis.txt  swagger_auth.txt  swagger_auth_detail.txt  swagger_output.txt  (+2 more)
baseDocs/: settlement_example.xml
royalties/backend/: .dockerignore  Dockerfile  check_backend.py  e2e_auth_check.py  pyproject.toml  run_dev.py  run_tests.py  start_dev.bat  start_dev.ps1  test_results.txt
royalties/backend/app/: config.py  main.py
royalties/backend/app/api/: auth.py  chat.py  uploads.py  validations.py
royalties/backend/app/db/: database.py
royalties/backend/app/models/: __init__.py  upload.py  user.py  validation_result.py
royalties/backend/app/schemas/: upload.py  user.py  validation.py
royalties/backend/app/services/: annotated_pdf_service.py  archive_service.py  batch_service.py  pdf_service.py  schilling_service.py  upload_service.py  validation_service.py
royalties/backend/app/validation/: base_rule.py  engine.py  parser.py
royalties/backend/royalty_statement_validator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
royalties/backend/tests/: conftest.py  run_e2e.py  test_api.py  test_e2e_auth.py  test_parser.py  test_rules.py
royalties/backend/tests/fixtures/: advances_guarantees.csv  bad_rates.csv  calculation_errors.csv  duplicate_rows.csv  missing_titles.csv  mixed_issues.csv  schilling_native.csv  valid_statement.json  valid_statement.xml
royalties/backend/uploads/: 2c206474-fa8b-4f17-aeff-b1cb6d0ede01.csv  67b8d73b-bc5b-41f8-a3ab-be3c3df1b882.csv  95430047-021a-4359-bf0a-048825f3c705.json
(+554 files in other folders)
